<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.multi-os-engine</groupId>
    <artifactId>eclipse-ide</artifactId>
    <version>1.4.2-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>features/MOEFeature</module>
        <module>sites/MOEUpdateSite</module>
        <module>plugins/migeran-moe</module>
    </modules>
    <properties>
        <tycho-version>0.25.0</tycho-version>
        <uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=3000 -Xmx1024m -XX:MaxPermSize=384m -XstartOnFirstThread
            -Dorg.eclipse.swtbot.keyboard.layout=EN_US
        </uitest.vmparams>
    </properties>

    <repositories>
        <repository>
            <id>tycho</id>
            <layout>p2</layout>
            <url>http://ibh-systems.com/download/tycho-build-tools</url>
        </repository>
        <repository>
            <id>luna</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/releases/neon</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <archiveSite>true</archiveSite>
                    <format>'v'yyyyMMddHHmm'-'${BUILD_NUMBER}</format>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
                <version>${tycho-version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
                <configuration>
                    <environments>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                    <includeAllDependencies>true</includeAllDependencies>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>